--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,141 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Baloo Thambi 2", cursive !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body {
+  line-height: 1.7;
+}
+
+.material-icons {
+  font-size: 4rem !important;
+}
+
+.cards {
+  background: #e6e6e6;
+}
+
+.cards .row {
+  width: 100%;
+  max-width: 1280px;
+  padding-top: 30px;
+  margin-bottom: 0;
+}
+
+.cards .row .col:not(:last-child) {
+  padding-right: 20px;
+}
+.cards .card {
+  background: transparent;
+  box-shadow: 6px 6px 14px 0 rgba(0, 0, 0, 0.2),
+    -8px -8px 18px 0 rgba(255, 255, 255, 0.55);
+  border-radius: 40px;
+  padding: 4px 30px 20px;
+  min-height: 380px;
+}
+
+.cards.container {
+  width: 100%;
+  max-width: none;
+  padding: 0 20px;
+}
+
+/* === BUTTONS === */
+.button {
+  font-weight: 400;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: none;
+  border-radius: 1.2rem;
+  padding: 1rem 3rem;
+  transition: all 260ms ease;
+  text-decoration: none;
+  font-family: inherit;
+  max-width: 100%;
+  color: #9baacf;
+  background: #e0e5ec;
+  box-shadow: 0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9),
+    -0.2rem -0.2rem 0.4rem #fff;
+}
+.button:hover,
+.button:focus {
+  color: #ff7025;
+  outline: none;
+}
+.button:active {
+  box-shadow: inset 0.2rem 0.2rem 0.5rem rgba(195, 193, 198, 0.9),
+    inset -0.2rem -0.2rem 0.5rem #fff;
+}
+.button--raised {
+  box-shadow: inset 0.2rem 0.2rem 0.5rem #fff,
+    inset -0.2rem -0.2rem 0.5rem rgba(195, 193, 198, 0.9),
+    0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9), -0.2rem -0.2rem 0.4rem #fff;
+}
+.button--pill {
+  border-radius: 2.4rem;
+}
+.button--primary {
+  color: #e0e5ec;
+  background: #ff7025;
+  box-shadow: inset 0.2rem 0.2rem 0.5rem #f8b639,
+    inset -0.2rem -0.2rem 0.5rem #ff4c00,
+    0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9), -0.2rem -0.2rem 0.4rem #fff;
+}
+.button--primary:hover,
+.button--primary:focus {
+  color: #fff;
+}
+.button--primary:active {
+  box-shadow: inset 0.2rem 0.2rem 0.5rem #ff4c00,
+    inset -0.2rem -0.2rem 0.5rem #f8b639;
+}
+.button--round,
+.button--square {
+  border-radius: 50%;
+  min-height: 4rem;
+  min-width: 4rem;
+  max-height: 4rem;
+  max-width: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  box-shadow: 0.3rem 0.3rem 0.5rem rgba(195, 193, 198, 0.9),
+    -0.2rem -0.2rem 0.4rem #fff;
+}
+.button--round .button__icon,
+.button--square .button__icon {
+  height: 2rem;
+  width: 2rem;
+}
+.button--square {
+  border-radius: 1.2rem;
+}
+.button--pin {
+  border-radius: 50%;
+  min-height: 2rem;
+  min-width: 2rem;
+  max-height: 2rem;
+  max-width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+.button--pin .button__icon {
+  height: 1.8rem;
+  width: 1.8rem;
 }
